Version 1.0RC4-CVS (?? ??? 2005)
 - Fixed problem with second edit of a single event in a repeating series 
   losing linkage with the original event.
 - Updated install/index.php. Added link to phpinfo if valid user. 
   Added security to dbtest, now requires log in to test db settings.
 - Fixed bug 1148602: External Recipients with same name fails
 - Updated install/index.php to use "\r\n" instead of "\n".  Added area
   that displays relavant PHP settings.
 - Fixed problem with views_edit.php, select groups not returning menbers
 - Fixed bug 1160167: 12AM Events cause display problems in edit_entry.php
 - Fixed bug 1158769: Category lost when modifing event by Admin
 - Fixed rendering problem in day.php with Safari
 - Fixed bug 1168686: Month display collides with minicals on Safari
 - Fixed $charset problem in xml definition in login.php
 - Fixed bug 1168682:  RC3 Language Detection Broken for Safari
 - Fixed bug 1169403:  Public Access not default selected if 
   Particiapants not shown. 
 - Fixed bug 1169078: Bad function call in import_handler.php
 - Fixed bug 1168092: Overlapping events display problem
 - Fixed bug 1167281: View_l loses colour for "today"
 - Added new default webcal_config values to all sql table definition files
 - Fixed bug 1167790: class="selectedday" assignments in other than day.php
 - Changed edit_entry_handler to remove requirement for Admins to approve
   Public events that they create.
 - Applied bug fix 1151442: Overlapping events display error in week.php
 - Removed most instances of htnlentities as unneeded
 - Fixed bug 1162486: Path exposure issue with view_entry.php
 - Fixed problem, if non-user calendars are diabled, the most recent change
   to add Public Access to the 'Manage Calendar of:' list throws a Warning.
 - Added option to set LDAP_OPT_PROTOCOL_VERSION in user-ldap.php
 - Updated Danish translation
 - Updated Finnish translation
Version 1.0RC3 (11 Mar 2005)